force-app/main/default/objects/APT_Sub_Account__c/APT_Sub_Account__c.object-meta.xml
<CustomObject>
    <label>Sub Account Request</label>
    <nameField>
        <label>Sub Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Account Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>