force-app/main/default/objects/APT_Sub_Account__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>Identifies account type for StartTrack sub accounts (mastered in TEAMS). Not used for Aus Post sub accounts (mastered in SAP).
Follower - This account will pay it&apos;s own invoice; Offspring of Leader - Leader will pay invoice for this sub account; Offspring of Follower - The chosen follower account will pay the invoice.</description>
    <inlineHelpText>“FOLLOWER” – Account responsible for its own invoice and linked to Leader&apos;s rates;;
“OFFSPRING” – Leader account responsible for Offspring&apos;s invoice and Offspring linked to Leader&apos;s rates;;
“OFFSPRING OF NON-LEADER ACCOUNT” – Parent (not Leader account) responsible for Offspring&apos;s invoice. Used for complex Enterprise customers;;</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follower</fullName>
                <label>Follower - Rates Relationship</label>
            </value>
            <value>
                <fullName>Offspring</fullName>
                <label>Offspring - Invoice Relationship</label>
            </value>
            <value>
                <fullName>Offspring Follower</fullName>
                <label>Offspring - Hierarchy Relationship (Parent under same Leader)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>