force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Account_Name_2__c.field-meta.xml
<CustomField>
    <fullName>APT_Account_Name_2__c</fullName>
    <inlineHelpText>This will only appear on the account and won’t be visible elsewhere.</inlineHelpText>
    <label>Account Name 2</label>
    <length>37</length>
    <type>Text</type>
</CustomField>