force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>APT_Billing_Account_Number__c</fullName>
    <formula>APT_Billing_Account__r.LEGACY_ID__c</formula>
    <label>Billing Account Number</label>
    <type>Text</type>
</CustomField>