force-app/main/default/objects/APT_Sub_Account__c/fields/APT_eLMS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>APT_eLMS_Enabled__c</fullName>
    <inlineHelpText>If ‘Yes’, please ensure you provide an eLMS enabled lodgement point that is available in the main/parent account to this sub account request. Select “eLMS Enabled Lodgement Points” link below to view the valid lodgement points.</inlineHelpText>
    <label>eLMS/eLMS Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>