force-app/main/default/objects/APT_Sub_Account__c/fields/APT_eParcel_Enabled__c.field-meta.xml
<CustomField>
    <fullName>APT_eParcel_Enabled__c</fullName>
    <inlineHelpText>This will be actioned if the customer has already signed for rates in the relevant lodgement zone. Otherwise, you will be notified that the Deal Support Request has been transferred so that a DoV can be performed.</inlineHelpText>
    <label>Add Contract Rates?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>