force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Postal_Address_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_Postal_Address_Country_Code__c</fullName>
    <label>Postal Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>