force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Postal_Address_Street_Postcode__c.field-meta.xml
<CustomField>
    <fullName>APT_Postal_Address_Street_Postcode__c</fullName>
    <label>Postal Street Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>