force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Postal_Address_Suburb__c.field-meta.xml
<CustomField>
    <fullName>APT_Postal_Address_Suburb__c</fullName>
    <label>Postal Suburb</label>
    <length>25</length>
    <type>Text</type>
</CustomField>