force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Quote_Proposal__c.field-meta.xml
<CustomField>
    <fullName>APT_Quote_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>Sub_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>