force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Source_of_Sub_Account_Request__c.field-meta.xml
<CustomField>
    <fullName>APT_Source_of_Sub_Account_Request__c</fullName>
    <label>Source of Sub-Account Request</label>
    <length>40</length>
    <type>Text</type>
</CustomField>