force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Sub_Account_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>APT_Sub_Account_Contact_Email_Address__c</fullName>
    <label>Sub Account Contact Email Address</label>
    <type>Email</type>
</CustomField>