force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Sub_Account_Contact_Telephone__c.field-meta.xml
<CustomField>
    <fullName>APT_Sub_Account_Contact_Telephone__c</fullName>
    <label>Sub Account Contact Telephone</label>
    <length>13</length>
    <type>Text</type>
</CustomField>