force-app/main/default/objects/APT_Sub_Account__c/fields/APT_Sub_Account_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>APT_Sub_Account_Request_Status__c</fullName>
    <label>Sub Account Request Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>