force-app/main/default/objects/APT_Sub_Account__c/fields/Is_Parcel_Send_Login_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Parcel_Send_Login_Required__c</fullName>
    <inlineHelpText>If ‘Yes’ and Contract Rates are required, Parcel Send registration email will be sent to indicated Customer Contact following successful account provisioning.</inlineHelpText>
    <label>Is Parcel Send Login Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>