force-app/main/default/objects/APT_Sub_Account__c/fields/Lodgement_Point_to_Work_Centre_Code__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Point_to_Work_Centre_Code__c</fullName>
    <description>This field captures the WCC code associated with Lodgement Points.</description>
    <label>Lodgement Point:Work Centre:Post Code</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>