force-app/main/default/objects/APT_Sub_Account__c/fields/ParentBillingAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentBillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the StarTrack billing account responsible for paying the invoice when payer account is already provisioned in TEAM. Only used for StarTrack billing accounts managed in TEAM.</description>
    <inlineHelpText>Indicates the StarTrack billing account responsible for paying the invoice when payer account is already provisioned in TEAM.</inlineHelpText>
    <label>Parent Billing Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Billing_Account__c.LeaderAccount__c</field>
            <operation>equals</operation>
            <valueField>$Source.APT_Billing_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Offspring Account Requests</relationshipLabel>
    <relationshipName>OffspringAccountRequests</relationshipName>
    <type>Lookup</type>
</CustomField>