force-app/main/default/objects/APT_Sub_Account__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>You can select one or more products</inlineHelpText>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPC</fullName>
            </value>
            <value>
                <fullName>eParcel</fullName>
            </value>
            <value>
                <fullName>Fulfilio</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Print Post</fullName>
            </value>
            <value>
                <fullName>UMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>