force-app/main/default/objects/APT_Sub_Account__c/fields/Sub_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Account_Name__c</fullName>
    <inlineHelpText>This should be relevant to the customer, and will appear on the invoice and any auto generated parcel labels. Do not use the name of the lodgement point.</inlineHelpText>
    <label>Sub Account Name</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>