force-app/main/default/objects/APT_Sub_Account__c/fields/SubAccountContact__c.field-meta.xml
<CustomField>
    <fullName>SubAccountContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If contact record does not exist, add new record and ensure it is linked to the Billing Account/Proposal Legal Entity Name with a valid Email.</inlineHelpText>
    <label>Sub Account Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Email</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sub Account Requests</relationshipLabel>
    <relationshipName>Sub_Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>