force-app/main/default/objects/APT_Sub_Account__c/validationRules/NewSubAccountRequestsMustBeInDraftStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>NewSubAccountRequestsMustBeInDraftStatus</fullName>
    <active>true</active>
    <description>New Sub Account Requests must be in &apos;Draft&apos; status on creation.</description>
    <errorConditionFormula>AND(ISNEW(), APT_Sub_Account_Request_Status__c &lt;&gt; &apos;Draft&apos;)</errorConditionFormula>
    <errorDisplayField>APT_Sub_Account_Request_Status__c</errorDisplayField>
    <errorMessage>Sub Account Request can only be created in Draft Stage.</errorMessage>
</ValidationRule>