force-app/main/default/objects/APT_Sub_Account__c/validationRules/STParentAccountShouldHaveSameLeader.validationRule-meta.xml
<ValidationRule>
    <fullName>STParentAccountShouldHaveSameLeader</fullName>
    <active>true</active>
    <description>Parent billing account for a StarTrack offspring billing account must be under the same leader account hierarchy.Validation is bypassed to support linking to a newly created parent billing account with a blank &apos;LeaderAccount__c&apos; (set by async process).</description>
    <errorConditionFormula>AND(
    OR(ISNEW(), ISCHANGED(ParentBillingAccount__c)), 
    NOT(ISBLANK(ParentBillingAccount__c)),
    NOT(
        ISCHANGED(APT_Sub_Account_Request_Status__c) &amp;&amp;
        PRIORVALUE(APT_Sub_Account_Request_Status__c)=&apos;Submitted&apos;
    ),
    APT_Billing_Account__c &lt;&gt; ParentBillingAccount__r.LeaderAccount__c
)</errorConditionFormula>
    <errorDisplayField>ParentBillingAccount__c</errorDisplayField>
    <errorMessage>Parent Billing Account should have the same Leader as the offspring.</errorMessage>
</ValidationRule>