force-app/main/default/objects/APT_Sub_Account__c/validationRules/STParentRequiredForOffspringOfFollower.validationRule-meta.xml
<ValidationRule>
    <fullName>STParentRequiredForOffspringOfFollower</fullName>
    <active>true</active>
    <description>Parent must be nominated for a StarTrack account whose invoice is paid by another follower account under the same leader account hierarchy.</description>
    <errorConditionFormula>AND(
	ISNEW(), 
	ISPICKVAL(AccountType__c, &apos;Offspring Follower&apos;),  
	ISBLANK(ParentBillingAccount__c), 
	ISBLANK(ParentAccountRequest__c)
)</errorConditionFormula>
    <errorMessage>Please include the Parent account number related to the Offpsring Account.</errorMessage>
</ValidationRule>